# github-monitor

./: .gitignore  ONEFILE-MODE.md  README-PYLOID.md  README.md  build-windows.bat  build.py  build.spec  docker-compose.yml  package-lock.json  package.json  pyloid-app.spec  pyloid_main.py  pyproject.toml  requirements-pyloid.txt  runtime_hook_pyloid.py  test-api.html  test_api_response.json
.claude/: settings.local.json
.github/workflows/: release.yml
assets/: README.md  create_icon.py
backend/: requirements.txt
backend/app/: config.py  github_client.py  main.py  models.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: ErrorBoundary.tsx  (+5 more)
jhl-github-desktop-app/: README.md  package.json  pyproject.toml
jhl-github-desktop-app/backend/: .env.example  Dockerfile
jhl-github-desktop-app/backend/app/: config.py  github_client.py  main.py
jhl-github-desktop-app/src-pyloid/: main.py  server.py
jhl-github-desktop-app/src/components/: SettingsDialog.tsx
jhl-github-desktop-app/src/config/: version.ts
jhl-github-desktop-app/src/utils/: storage.ts
src/: App.tsx  api.ts  vite-env.d.ts
src-pyloid/: .env  config.py  config_cli.py  config_manager.py  github_client.py  main.py  models.py  requirements.txt  server.py  test_config.py  version.py
src/api/: config.ts  git.ts
src/components/: CommitHistory.tsx  CommitsTab.tsx  FileChanges.tsx  ListView.tsx  NotificationsList.tsx  SearchFilter.tsx  SettingsDialog.tsx  TabPanel.tsx  TreeView.tsx
src/utils/: filterTree.ts  storage.ts
(+2 files in other folders)
