[project]
name = "github-desktop-clone"
version = "1.0.0"
readme = "README.md"
description = "JHL GitHub Desktop"

requires-python = ">=3.9"

dependencies = [
    "pyloid",
    "pyloid-adapter",
    "fastapi",
    "uvicorn",
    "httpx",
    "python-dotenv",
    "pydantic",
    "pydantic-settings"
]

[dependency-groups]
dev = [
    "pyloid-builder",
    "pyloid-watcher",
    "ruff",
]
