[project]
name = "jhl-github-desktop"
version = "0.0.8"
readme = "README.md"
description = "JHL GitHub Desktop - GitHub Actions Runner Monitor"
authors = [{name = "JHL (declue)"}]

requires-python = ">=3.9"

dependencies = [
    "pyloid>=0.0.1",
    "pyloid-adapter>=0.0.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pyloid-builder",
    "pyloid-watcher",
    "ruff",
]
